--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "francescomalatesta/laravel-reactions": "^0.1.1",
+        "hootlex/laravel-friendships": "^1.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
     },
