--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "axios": "^0.15.3",
+    "cross-env": "^5.0.5",
     "jquery": "^3.1.1",
     "laravel-mix": "^0.8.3",
     "vue": "^2.1.10",
@@ -16,7 +17,9 @@
   },
   "dependencies": {
     "autosize": "^4.0.0",
+    "laravel-echo": "^1.3.2",
     "moment": "^2.18.1",
+    "pusher-js": "^4.1.0",
     "vue-autosize": "^1.0.0",
     "vue2-multi-uploader": "^1.4.1"
   }
