--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cross-env": "^5.0.5",
     "jquery": "^3.1.1",
     "laravel-mix": "^0.8.3",
+    "pusher-js": "^4.1.0",
     "vue": "^2.1.10",
     "vue-router": "^2.4.0"
   },
